# LSMATools

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  README.md  RELEASE_NOTES.md  __init__.py  main.py  pyproject.toml  requirements.txt  设计文档.md
analysis/: __init__.py  dice_evaluator.py  geom_evaluator.py  icc_utils.py  report_generator.py  run_analysis.py  使用说明文档.md
chain/: __init__.py  vertebra_chain.py
config/: __init__.py  metadata_parser.py  param_route.py  params.py
detection/: __init__.py  _scan_utils.py  anterior_edge.py  disc_centers.py  fan_scanner.py  junction_detector.py  signal_ref.py
docs/: algorithm_design.md  api_reference.md
examples/: basic_usage.py
examples/data/: Blumbar_example_T2_TSE_DIXON_SAG_W_0005_LOG.json  Blumbar_example_T2_TSE_DIXON_SAG_W_0005_coords.csv
output/: __init__.py  csv_export.py  log_export.py  mask_export.py  visualization.py
postprocessing/: __init__.py  anatomical_correction.py  export.py  geometric_center.py  vertebrae_chain.py  visualization.py
preprocessing/: __init__.py  coordinate_align.py  image_loader.py  series_utils.py  slice_selector.py
segmentation/: __init__.py  anterior_edge.py  canal_processor.py  clustering.py  cortical_line.py  endplate_detector.py  scan_lines_v15.py
utils/: __init__.py  geometry.py
